cmake_minimum_required(VERSION 3.15)
project(stl_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(array array.cpp)
add_executable(vector vector.cpp)
add_executable(deque deque.cpp xray.h)
add_executable(forward_list forward_list.cpp)
add_executable(list list.cpp)
add_executable(set set.cpp)
add_executable(map map.cpp)
add_executable(multiset multiset.cpp)
add_executable(multimap multimap.cpp)
add_executable(unordered_set unordered_set.cpp)
add_executable(unordered_map unordered_map.cpp)
add_executable(unordered_multiset unordered_multiset.cpp)
add_executable(unordered_multimap unordered_multimap.cpp)
add_executable(stack stack.cpp)
add_executable(queue queue.cpp)
add_executable(priority_queue priority_queue.cpp)
