cmake_minimum_required(VERSION 3.15)
project(stl_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(binary_search binary_search.cpp)
add_executable(accumulate accumulate.cpp)
add_executable(find find.cpp)
add_executable(fill fill.cpp)
add_executable(min min.cpp)
add_executable(sort sort.cpp)
add_executable(copy copy.cpp)
add_executable(set set.cpp)
add_executable(partition partition.cpp)
